--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 		width: 123px;
 		height: 123.5px;
 		left: 29px;
-		top: 65.25px;
+		top: 61.5px;
 	}
 	#Winterspell_Club {
 		opacity: 1;
@@ -172,7 +172,8 @@
 		<pattern elementId="winterspell_logo_A0_Rectangle_4" id="winterspell_logo_A0_Rectangle_4_pattern" x="0" y="0" width="100%" height="100%">
 			<image x="0" y="0" width="100%" height="100%" href="winterspell_logo_A0_Rectangle_4_pattern.png" xlink:href="winterspell_logo_A0_Rectangle_4_pattern.png"></image>
 		</pattern>
-
+		<rect id="winterspell_logo" rx="61.5" ry="61.5" x="0" y="0" width="123" height="123.5">
+		</rect>
 	</svg>
 	<div id="Winterspell_Club">
 		<span>Winterspell Club</span>
