--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 	</div>
 	<div id="Group_1">
 		<div id="Like_to_join__Please__fill_out"><span>Like to join? Please <br>
-	    fill out this </span><span style="font-style:normal;font-weight:lighter;"><a href="google.com">application</a></span></div>
+	    fill out this </span><span style="font-style:normal;font-weight:lighter;"><a href="https://forms.gle/8u2YSLDF5VQhnwCA9">application</a></span></div>
 		<div id="Read_our_constitution_here"><span>Read our constitution </span><span style="font-style:normal;font-weight:lighter;"><a href="https://docs.google.com/document/d/13JIDP-fVOpPZEX1cTJ14tjZIfi2GUI0J6_ZeBMry5Ko/edit">here</a></span></div>
 	</div>
 </div>
