--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 		</path>
 	</svg>
 	<div id="The_Winterspell_Club_was_found">
-		<span>The Winterspell Club was founded in 2016 by Pierce Anderson and Hunter Link while playing Minecraft. <br/>Now it has shifted to Discord and has amassed just over 60 members in two different countries.<br/> It is a place to chat, share memes, art, music, and much more.</span>
+		<span>The Winterspell Club was founded in 2016 by Pierce and Hunter while playing Minecraft. <br/>Now it has shifted to Discord and has amassed just over 60 members in two different countries.<br/> It is a place to chat, share memes, art, music, and much more.</span>
 	</div>
 	<div id="Group_1">
 		<div id="Like_to_join__Please__fill_out"><span>Like to join? Please <br>
