--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8"/>
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 <title>Winterspell</title>
+<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 <style id="applicationStylesheet" type="text/css">
 	body {
 		margin: 0;
