--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8"/>
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 <title>Winterspell</title>
-<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+<link rel="shortcut icon" type="image/x-icon" href="winterspell_logo_A0_Rectangle_4_pattern.png" />
 <style id="applicationStylesheet" type="text/css">
 	body {
 		margin: 0;
